<resources>
    <string name="app_name">Wiki Monster Legends</string>
    <string name="name_monster">Name Monster</string>
    <string name="element_monster">Element</string>
    <string name="stat_life">000</string>
    <string name="stat_power">000</string>
    <string name="stat_speed">000</string>
    <string name="stat_stamina">000</string>
    <string name="logo">logo</string>
    <string name="prec">Previous\nmonster</string>
    <string name="suiv">Next\nmonster</string>
    <string name="back">Back to list</string>
    <string name="skills">Monster\'s Skills (Level 0)</string>
    <string name="evolution">Monster\'s Evolution</string>
    <string name="powerToast">Power Stat</string>
    <string name="lifeToast">Life Stat</string>
    <string name="speedToast">Speed Stat</string>
    <string name="staminaToast">Stamina Stat</string>

</resources>
