<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.apprenti.wikimonsterlegends.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/name_monster"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/name_monster"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image_monster"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/element_monster_img"
        android:layout_width="124dp"
        android:layout_height="25dp"
        android:text="@string/element_monster"
        android:textAlignment="textStart"
        android:textSize="22sp"
        app:layout_constraintLeft_toRightOf="@+id/image_monster"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/name_monster"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintHorizontal_bias="0.516" />

    <ImageView
        android:id="@+id/element_monster_img"
        android:layout_width="31dp"
        android:layout_height="36dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="43dp"
        app:layout_constraintLeft_toRightOf="@+id/image_monster"
        app:layout_constraintTop_toBottomOf="@+id/name_monster"
        app:srcCompat="@drawable/d" />

    <ImageView
        android:id="@+id/image_monster"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="47dp"
        android:contentDescription="Image principale"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tyrannoking_0"
        tools:layout_editor_absoluteX="26dp" />

    <ImageView
        android:id="@+id/stat_life_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stat_power_img"
        app:layout_constraintTop_toBottomOf="@+id/image_monster"
        app:srcCompat="@drawable/stat_life_50" />

    <TextView
        android:id="@+id/stat_life"
        android:layout_width="52dp"
        android:layout_height="19dp"
        android:text="@string/stat_life"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stat_life_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stat_power" />

    <ImageView
        android:id="@+id/stat_power_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/stat_life_img"
        app:layout_constraintRight_toLeftOf="@+id/stat_speed_img"
        app:layout_constraintTop_toBottomOf="@+id/image_monster"
        app:srcCompat="@drawable/stat_power_230" />

    <TextView
        android:id="@+id/stat_power"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:text="@string/stat_power"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stat_power_img"
        app:layout_constraintRight_toLeftOf="@+id/stat_speed"
        app:layout_constraintLeft_toRightOf="@+id/stat_life" />

    <ImageView
        android:id="@+id/stat_speed_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/stat_power_img"
        app:layout_constraintRight_toLeftOf="@+id/stat_stamina_img"
        app:layout_constraintTop_toBottomOf="@+id/image_monster"
        app:srcCompat="@drawable/stat_speed_175" />

    <TextView
        android:id="@+id/stat_speed"
        android:layout_width="49dp"
        android:layout_height="20dp"
        android:text="@string/stat_speed"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stat_speed_img"
        app:layout_constraintRight_toLeftOf="@+id/stat_stamina"
        app:layout_constraintLeft_toRightOf="@+id/stat_power" />

    <ImageView
        android:id="@+id/stat_stamina_img"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/stat_speed_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_monster"
        app:srcCompat="@drawable/stat_stamina_100" />

    <TextView
        android:id="@+id/stat_stamina"
        android:layout_width="52dp"
        android:layout_height="21dp"
        android:text="@string/stat_stamina"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stat_stamina_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/stat_speed" />

    <ImageView
        android:id="@+id/egg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="78dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/etape1"
        app:layout_constraintTop_toBottomOf="@+id/stat_life"
        app:srcCompat="@drawable/tyrannoking_0" />

    <ImageView
        android:id="@+id/etape1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="77dp"
        app:layout_constraintLeft_toRightOf="@+id/egg"
        app:layout_constraintRight_toLeftOf="@+id/etape2"
        app:layout_constraintTop_toBottomOf="@+id/stat_power"
        app:srcCompat="@drawable/tyrannoking_1" />

    <ImageView
        android:id="@+id/etape2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="77dp"
        app:layout_constraintLeft_toRightOf="@+id/etape1"
        app:layout_constraintRight_toLeftOf="@+id/etape3"
        app:layout_constraintTop_toBottomOf="@+id/stat_speed"
        app:srcCompat="@drawable/tyrannoking_2" />

    <ImageView
        android:id="@+id/etape3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="76dp"
        app:layout_constraintLeft_toRightOf="@+id/etape2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stat_stamina"
        app:srcCompat="@drawable/tyrannoking_3" />

</android.support.constraint.ConstraintLayout>
